--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -6,7 +6,7 @@
 #    By: aahlaqqa <aahlaqqa@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/06/06 16:06:40 by aahlaqqa          #+#    #+#              #
-#    Updated: 2024/06/14 01:41:38 by aahlaqqa         ###   ########.fr        #
+#    Updated: 2024/06/14 20:05:41 by aahlaqqa         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,7 @@
 CFLAGS= -Wall -Wextra -Werror
 LFLAGS= -lpthread
 CC= cc
-SOURCES= main.c check_command.c ft_atoi_bonus.c create_semaphore.c print_status.c philo_start.c exit_philo.c
+SOURCES= main.c check_command.c ft_atoi_bonus.c create_semaphore.c print_status.c philo_start.c exit_philo.c init_philo.c ft_sleep.c
 OBJECTS= $(SOURCES:.c=.o)
 
 NAME= philo_bonus
